<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="open">Open</string>
    <string name="widget">Widget</string>
    <string name="event">Event</string>

    <plurals name="notes_cut">
        <item quantity="one">Note cut</item>
...
    <string name="message_note_created">Note created</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>

    <string name="schedule">Schedule</string>
    <string name="refile">Refile</string>
    <string name="deadline">Deadline</string>
    <string name="closed">Closed</string>

    <!-- TODO: Not hints, rename -->
    <string name="schedule_button_hint">Scheduled time</string>
    <string name="deadline_button_hint">Deadline time</string>
    <string name="closed_button_hint">Closed time</string>

...
    <string name="no_notes_found_after_search">Your search did not match any notes</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>

    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
...
    <string name="new_below">New below</string>

    <string name="confirm_unlinking_from_dropbox_title">Unlink from Dropbox?</string>
    <string name="confirm_unlinking_from_dropbox_message">You will not be able to sync to Dropbox until you link to it again.</string>

    <string name="note_book_not_set">Notebook not set</string>
    <string name="title_can_not_be_empty">Title cannot be empty</string>
    <string name="can_not_be_empty">Cannot be empty</string>
    <string name="invalid_url">Invalid URL</string>

    <string name="no_notebooks">You have no notebooks</string>
    <string name="no_notes">Notebook has no notes</string>
    <string name="create_new_repository_for_syncing">Create new repository for syncing your notebooks</string>
...
    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>

    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>

    <string name="created_at_property">Created-at property</string>

    <string name="properties">Properties</string>
    <string name="property_name">Property name</string>
    <string name="property_value">Property value</string>

    <string name="reminder_for_scheduled">Scheduled: %s</string>
    <string name="reminder_for_deadline">Deadline: %s</string>
    <string name="reminder_for_event">Event: %s</string>

    <string name="scheduled_new_notes_for_today">Schedule new notes for today</string>
...
    <string name="content">Content</string>

    <string name="prepend">Prepend</string>
    <string name="insert_new_note_at_beginning">Insert new note at beginning</string>

    <string name="add_id_property">Add ID property</string>
    <string name="new_property">New property</string>
    <string name="remove">Remove</string>
    <string name="populate_the_id_property">Populate the \"ID\" property in all new notes</string>

    <string name="developer_options">Developer options</string>
    <string name="git_repository_type">Git repository type</string>
    <string name="in_development">In development</string>
...

    <string name="placement_of_shared_text">Placement of shared plain text</string>
    <string name="in_note_heading">In note heading</string>
    <string name="in_note_content">In note content</string>
    <string name="create_org_links_from_shared_links">Create org links from shared links</string>
    <string name="book_names_cannot_contain">Book names cannot contain \'../\'</string>
    <string name="is_active_label">Active</string>

    <string name="search_filter_exclude_done">Exclude done items</string>
    <string name="search_filter_show_as_agenda">Show as agenda</string>
    <string name="search_filter_default_sort_order">Default</string>
    <string name="search_filter_book_sort_order">Book</string>
    <string name="search_filter_title_sort_order">Title</string>
...
